--- a/setup/Makefile
+++ b/setup/Makefile
@@ -1,8 +1,11 @@
 fundamental:
-	sudo yum install emacs git tmux ruby make
+	sudo yum install emacs git tmux ruby rubygems make
 
 node:
 	sudo yum install wget git gcc-c++ openssl-devel
 	git clone git://github.com/creationix/nvm.git ~/.nvm
 	@echo To use nvm, you should
 	@echo source ~/.nvm/nvm.sh
+
+gems:
+	gem install padrino
