--- a/setup/Makefile
+++ b/setup/Makefile
@@ -2,10 +2,11 @@ fundamental:
 	sudo yum install emacs git tmux ruby ruby-devel rubygems make
 
 node:
-	sudo yum install wget git gcc-c++ openssl-devel
+	sudo yum install wget git gcc gcc-c++ openssl-devel
 	git clone git://github.com/creationix/nvm.git ~/.nvm
 	@echo To use nvm, you should
 	@echo source ~/.nvm/nvm.sh
 
 gems:
+	sudo yum install sqlite-devel
 	sudo gem install padrino
